# SKYWALKER

./: README.md  start.bash
src/p4/apriltag_ros/cfg/: tags_36h11.yaml
src/p4/apriltag_ros/src/: AprilTagNode.cpp
src/p4/diagnostics/diagnostic_remote_logging/: CMakeLists.txt.uncrustify.uncrustify  package.xml
src/p4/moveit_test_interface/: CMakeLists.txt  package.xml
src/p4/moveit_test_interface/launch/: test_launch.launch.py
src/p4/moveit_test_interface/src/: moveit_test_interface.cpp
src/p4/p4_brake/: package.xml  setup.cfg  setup.py
src/p4/p4_brake/p4_brake/: brake_node.py
src/p4/p4_crawling_motion/: package.xml  setup.cfg  setup.py
src/p4/p4_crawling_motion/p4_crawling_motion/: crawling_motion_node.py
src/p4/p4_docking/: package.xml  setup.cfg  setup.py
src/p4/p4_docking/p4_docking/: docking_node.py
src/p4/p4_end_effector/: package.xml  setup.cfg  setup.py
src/p4/p4_end_effector/p4_end_effector/: end_effector.ino  end_effector_node.py
src/p4/p4_extra/: package.xml  setup.cfg  setup.py
src/p4/p4_extra/cfg/: cali.yaml
src/p4/p4_extra/p4_extra/: base_camera_cali.py  cart_speed.py  rectify.py
src/p4/p4_launcher/: CMakeLists.txt  package.xml
src/p4/p4_launcher/launch/: p4_base.launch.py  (+2 more)
src/p4/p4_robot_controller/: package.xml  setup.cfg  setup.py
src/p4/p4_servo_vision/: package.xml  setup.cfg  setup.py
src/p4/p4_state_machine/: package.xml  setup.cfg  setup.py
src/p4/p4_target_locator/: package.xml  setup.cfg  setup.py
src/p4/rob10_robot_policy/: package.xml  setup.cfg  setup.py
src/p4/rob10_robot_policy/rob10_robot_policy/: p2p_test.py  robot_mover.py  run_task_move.py  run_task_move_2.py  run_task_move_3.py  run_task_reach.py
src/p4/rob10_robot_policy/rob10_robot_policy/agents/move/: base_move_policy_1.pt  base_move_policy_obs_stats_1.pt  env_3.yaml
src/p4/rob10_robot_policy/rob10_robot_policy/agents/move_gen4/: base_move_policy_correct.pt  base_move_policy_correct_obs_stats.pt  env.yaml
src/p4/rob10_robot_policy/rob10_robot_policy/agents/move_gen5/: env.yaml  skywalker_base_move_policy_v2.pt  skywalker_base_move_policy_v2_obs_stats.pt
src/p4/rob10_robot_policy/rob10_robot_policy/agents/ptp/: agent.yaml  best_agent.pt  env.yaml  env1.yaml  skywalker_ptp_policy_fixed.pt  skywalker_ptp_policy_fixed_obs_stats.pt
src/p4/rob10_robot_policy/rob10_robot_policy/agents/ptp/old_ones/: skywalker_ptp_policy.pt  skywalker_ptp_policy_fixed2.pt  skywalker_ptp_policy_fixed_obs_stats.pt
src/p4/rob10_robot_policy/rob10_robot_policy/agents/ptp_gen4/: agent.yaml  env.yaml  skywalker_ptp_baseframe_policy.pt  skywalker_ptp_baseframe_policy_obs_stats.pt
src/p4/rob10_robot_policy/rob10_robot_policy/controllers/: policy_controller.py
src/p4/rob10_robot_policy/rob10_robot_policy/robots/: gen3.py  gen3_move.py  gen4_move.py  gen4_ptp.py  gen5_move.py
src/p4/rob10_robot_policy/rob10_robot_policy/utils/: config_loader.py  test.py
src/p4/xarm_ros2/: ReadMe.md  ReadMe_cn.md
(+37 files in other folders)
