<?xml version="1.0"?>
<package format="3">
  <name>manual_rectify</name>
  <version>0.0.1</version>
  <description>Calibration publisher, rectifier and KDL cartesian-velocity monitor.</description>

  <maintainer email="you@domain.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- build -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- run-time + build dependencies -->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>numpy</depend>
  <depend>urdf_parser_py</depend>
  <depend>python_orocos_kdl</depend>
  <depend>tf2_ros</depend>
  <depend>tf_transformations</depend>
  <depend>ament_index_python</depend>

  <!-- pure-Python extras -->
  <exec_depend>pyyaml</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

