<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rob10_robot_policy</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="akawar23@student.aau.com">akawar23</maintainer>
  <license>TODO: License declaration</license>

  <depend>control_msgs</depend>

  <!-- <depend>pcl_conversions</depend> -->
  <!-- <depend>pcl_ros</depend> -->
  <depend>pluginlib</depend>
  <!-- <depend>rosbag</depend> -->
  <depend>rviz_visual_tools</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>






  <build_depend>eigen</build_depend>
  <build_depend>geometric_shapes</build_depend>
  <build_depend>kdl_parser_py</build_depend>
  <build_export_depend>kdl_parser_py</build_export_depend>


  <!-- <exec_depend>franka_description</exec_depend> -->
  <!-- <exec_depend>moveit_commander</exec_depend> -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  
  <exec_depend>torch</exec_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>gripper_controllers</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>jupyter-notebook</exec_depend>
  <exec_depend>moveit_py</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <exec_depend>kdl_parser_py</exec_depend>


  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ros_testing</test_depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
